--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,179 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['Vorname', 'Name', 'Kuerzel', 'Budget', 'Hausnummer'],\n",
-       " [['Max', 'Mustermann', 'MM', '50000', '3c'],\n",
-       "  ['Angela', 'Berkel', 'AB', '100000', '5'],\n",
-       "  ['Horst', 'Flamer', 'HF', '30000', '20b']])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "daten_lite = []\n",
-    "with open(read_file, \"r\", encoding='utf-8-sig') as f:\n",
-    "    for idx, line in enumerate(f):\n",
-    "        line = line.rstrip('\\n')\n",
-    "        line = line.split(\";\")\n",
-    "        if(idx == 0):\n",
-    "            spalten_lite = line\n",
-    "        else:\n",
-    "            daten_lite.append(line)\n",
-    "spalten_lite, daten_lite"
+    "test = table.Table(\"test\", read_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-ec3c2ff23cca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"r\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8-sig'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m';'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------+--------+-----+---------+----------+\n",
+      "|         Kuerzel          |  Raum  | Tag | Uhrzeit | Semester |\n",
+      "+--------------------------+--------+-----+---------+----------+\n",
+      "|  Di_10_12_Z6_HS4_SS_19   | Z6_HS4 |  Di |  10_12  |  SS_19   |\n",
+      "|   Do_8_10_Z6_HS4_SS_19   | Z6_HS4 |  Do |   8_10  |  SS_19   |\n",
+      "|  Di_10_12_Z6_HS4_SS_18   | Z6_HS4 |  Di |  10_12  |  SS_18   |\n",
+      "|   Do_8_10_Z6_HS4_SS_18   | Z6_HS4 |  Do |   8_10  |  SS_18   |\n",
+      "| Mi_14_16_Z6_HS1_WS_19_20 | Z6_HS1 |  Mi |  14_16  | WS_19_20 |\n",
+      "| Mi_16_18_Z6_HS1_WS_19_20 | Z6_HS1 |  Mi |  16_18  | WS_19_20 |\n",
+      "| Mi_14_16_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  14_16  | WS_18_19 |\n",
+      "| Mi_16_18_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  16_18  | WS_18_19 |\n",
+      "+--------------------------+--------+-----+---------+----------+\n"
      ]
     }
    ],
    "source": [
-    "with open(read_file, \"r\", encoding='utf-8-sig') as f:\n",
-    "    print(f.read().splitlines().split(';'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(read_file, delimiter=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Vorname', 'Name', 'Kuerzel', 'Budget', 'Hausnummer']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spalten = list(data)\n",
-    "spalten"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Max', 'Mustermann', 'MM', 50000, '3c'],\n",
-       " ['Angela', 'Berkel', 'AB', 100000, '5'],\n",
-       " ['Horst', 'Flamer', 'HF', 30000, '20b']]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daten = data.values.tolist()\n",
-    "daten"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neuer_eintrag = ['Amar', 'Hekalo', 'AH', 20000, '1c']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "daten.append(neuer_eintrag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Max', 'Mustermann', 'MM', 50000, '3c'],\n",
-       " ['Angela', 'Berkel', 'AB', 100000, '5'],\n",
-       " ['Horst', 'Flamer', 'HF', 30000, '20b'],\n",
-       " ['Amar', 'Hekalo', 'AH', 20000, '1c']]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daten"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spalten.index(\"Vorname\")"
+    "test.present()"
    ]
   },
   {
