--- a/tests.ipynb
+++ b/tests.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = \"./resources/test.csv\""
+    "belegung_file = \"./resources/belegung.csv\"\n",
+    "raum_file = \"./resources/raum.csv\""
    ]
   },
   {
@@ -24,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = table.Table(\"test\", read_file)"
+    "belegung = table.Table(\"Belegung\", belegung_file)\n",
+    "raum = table.Table(\"Raum\", raum_file)"
    ]
   },
   {
@@ -49,101 +51,76 @@
       "| Mi_16_18_Z6_HS1_WS_19_20 | Z6_HS1 |  Mi |  16_18  | WS_19_20 |\n",
       "| Mi_14_16_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  14_16  | WS_18_19 |\n",
       "| Mi_16_18_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  16_18  | WS_18_19 |\n",
-      "+--------------------------+--------+-----+---------+----------+\n"
+      "+--------------------------+--------+-----+---------+----------+\n",
+      "+---------+------+---------+\n",
+      "| Kuerzel | Raum | Groesse |\n",
+      "+---------+------+---------+\n",
+      "|  Z6_HS4 |  Z6  |  600.0  |\n",
+      "|  Z6_HS1 |  Z6  |  200.0  |\n",
+      "+---------+------+---------+\n"
      ]
     }
    ],
    "source": [
-    "test.present()"
+    "belegung.present()\n",
+    "raum.present()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Specified field name does not exist.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not NoneType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-617beee664c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msuper_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbelegung\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Raum'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraum\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Kurzel'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Git\\sql_table_simple\\table.py\u001b[0m in \u001b[0;36mjoin\u001b[1;34m(self, self_field, second_table, second_field)\u001b[0m\n\u001b[0;32m    158\u001b[0m         \u001b[0msecond_field_as_column\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    159\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msecond_table\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 160\u001b[1;33m             \u001b[0msecond_field_as_column\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    161\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    162\u001b[0m         \u001b[1;31m# copy data from first table to temporary list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not NoneType"
+     ]
+    }
+   ],
    "source": [
-    "select = ['test.Uhrzeit', '=', '10_12']"
+    "super_table = belegung.join('Raum', raum, 'Kuerzel')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<built-in function eq>\n"
+      "+--------------------------+--------+-----+---------+----------+----------+---------+\n",
+      "|         Kuerzel          |  Raum  | Tag | Uhrzeit | Semester | Raum.Tag | Groesse |\n",
+      "+--------------------------+--------+-----+---------+----------+----------+---------+\n",
+      "|  Di_10_12_Z6_HS4_SS_19   | Z6_HS4 |  Di |  10_12  |  SS_19   |    Z6    |  600.0  |\n",
+      "|   Do_8_10_Z6_HS4_SS_19   | Z6_HS4 |  Do |   8_10  |  SS_19   |    Z6    |  600.0  |\n",
+      "|  Di_10_12_Z6_HS4_SS_18   | Z6_HS4 |  Di |  10_12  |  SS_18   |    Z6    |  600.0  |\n",
+      "|   Do_8_10_Z6_HS4_SS_18   | Z6_HS4 |  Do |   8_10  |  SS_18   |    Z6    |  600.0  |\n",
+      "| Mi_14_16_Z6_HS1_WS_19_20 | Z6_HS1 |  Mi |  14_16  | WS_19_20 |    Z6    |  200.0  |\n",
+      "| Mi_16_18_Z6_HS1_WS_19_20 | Z6_HS1 |  Mi |  16_18  | WS_19_20 |    Z6    |  200.0  |\n",
+      "| Mi_14_16_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  14_16  | WS_18_19 |    Z6    |  200.0  |\n",
+      "| Mi_16_18_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  16_18  | WS_18_19 |    Z6    |  200.0  |\n",
+      "+--------------------------+--------+-----+---------+----------+----------+---------+\n"
      ]
     }
    ],
    "source": [
-    "test.select(select)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------------+--------+-----+---------+----------+\n",
-      "|        Kuerzel        |  Raum  | Tag | Uhrzeit | Semester |\n",
-      "+-----------------------+--------+-----+---------+----------+\n",
-      "| Di_10_12_Z6_HS4_SS_19 | Z6_HS4 |  Di |  10_12  |  SS_19   |\n",
-      "| Di_10_12_Z6_HS4_SS_18 | Z6_HS4 |  Di |  10_12  |  SS_18   |\n",
-      "+-----------------------+--------+-----+---------+----------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "test.present()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------------+--------+-----+---------+----------+\n",
-      "|         Kuerzel          |  Raum  | Tag | Uhrzeit | Semester |\n",
-      "+--------------------------+--------+-----+---------+----------+\n",
-      "|  Di_10_12_Z6_HS4_SS_19   | Z6_HS4 |  Di |  10_12  |  SS_19   |\n",
-      "|  Di_10_12_Z6_HS4_SS_18   | Z6_HS4 |  Di |  10_12  |  SS_18   |\n",
-      "| Mi_14_16_Z6_HS1_WS_19_20 | Z6_HS1 |  Mi |  14_16  | WS_19_20 |\n",
-      "| Mi_14_16_Z6_HS1_WS_18_19 | Z6_HS1 |  Mi |  14_16  | WS_18_19 |\n",
-      "+--------------------------+--------+-----+---------+----------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "def select(table, condition):\n",
-    "    # TODO: Perhaps change to condition[0] is just field and name will be parsed in upper database class\n",
-    "    name, field = condition[0].split('.')\n",
-    "    op = convert_to_operator(condition[1])\n",
-    "    data = table.data\n",
-    "    print(op)\n",
-    "    value = condition[2]\n",
-    "    if name != self.name:\n",
-    "        raise Warning('Table in select condition is different from this table')\n",
-    "    elif not self.is_valid_field(field):\n",
-    "        raise Warning('Table does not have specified field name')\n",
-    "    else:\n",
-    "        column = table.index(field)\n",
-    "        for idx, row in enumerate(self.data):\n",
-    "            if not op(row[column], value):\n",
-    "                print(len(table.data))\n",
-    "                del data[idx]\n",
-    "        table.data = data"
+    "super_table.present()"
    ]
   },
   {
@@ -392,6 +369,205 @@
    "source": [
     "a = [['test', 'test', 'a', 'b', 20], ['']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Oiml']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.split(', ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = database.Database()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.add_table('Belegung', 'resources/belegung.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.add_table('Raum', 'resources/raum.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Belegung', 'Raum']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = list(db.tables.keys())\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'FROM from WHERE where AND and'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'FROM from WHERE where AND and'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.replace('SELECT', 'Select').replace('select', 'Select')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.isfile('resources')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = table.Table('test', 'resources')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not test.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
